[package]
name = "couchy"
version = "0.0.1"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "0f32c4a01a6da76d7477caa40908aba9ce959839", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }